security part deleted
