# public-transport-rest-contract/src/main/resources/openapi.yml
@@ -10,250 +10,6 @@ servers:
   - url: http://localhost:8081
 
 paths:
-  /authentication:
-    post:
-      tags:
-        - Authenticate
-      operationId: createAuthenticationToken
-      summary: Create new token.
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Authenticate"
-      responses:
-        201:
-          description: token succesfully created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Token'
-        400:
-          $ref: '#/components/responses/400BadRequest'
-        500:
-          $ref: '#/components/responses/500ServerError'
-
-  /register:
-    post:
-      tags:
-        - Authenticate
-      operationId: registerUser
-      summary: Register new user.
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UserRegister"
-      responses:
-        200:
-          description: User succesfully registered
-        400:
-          $ref: '#/components/responses/400BadRequest'
-        500:
-          $ref: '#/components/responses/500ServerError'
-
-  /user:
-    post:
-      tags:
-        - User
-      operationId: createNewUser
-      summary: Add a new user.
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/User"
-      responses:
-        201:
-          description: User succesfully created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        400:
-          $ref: '#/components/responses/400BadRequest'
-        401:
-          $ref: '#/components/responses/401Unauthorized'
-        403:
-          $ref: '#/components/responses/403PermissionDenied'
-        500:
-          $ref: '#/components/responses/500ServerError'
-
-    put:
-      tags:
-        - User
-      operationId: updateUser
-      summary: Update a user.
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-      responses:
-        204:
-          description: Successfully updated.
-        400:
-          $ref: '#/components/responses/400BadRequest'
-        401:
-          $ref: '#/components/responses/401Unauthorized'
-        403:
-          $ref: '#/components/responses/403PermissionDenied'
-        404:
-          $ref: '#/components/responses/404ContentNotFound'
-        500:
-          $ref: '#/components/responses/500ServerError'
-
-  /user/search:
-    post:
-      tags:
-        - User
-      operationId: searchUser
-      summary: Search user.
-      parameters:
-        - $ref: '#/components/parameters/X-Page'
-        - $ref: '#/components/parameters/X-Size'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserSearch'
-      responses:
-        206:
-          description: 'Successful request'
-          headers:
-            X-Page:
-              $ref: '#/components/headers/X-Page'
-            X-Size:
-              $ref: '#/components/headers/X-Size'
-            X-Total-Pages:
-              $ref: '#/components/headers/X-Total-Pages'
-            X-Total-Size:
-              $ref: '#/components/headers/X-Total-Size'
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/User'
-        400:
-          $ref: '#/components/responses/400BadRequest'
-        403:
-          $ref: '#/components/responses/403PermissionDenied'
-        500:
-          $ref: '#/components/responses/500ServerError'
-
-
-  /user/{id}:
-    get:
-      tags:
-        - User
-      operationId: getUserById
-      summary: Get user by user id.
-      description: Get user by user id.
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: string
-            format: uuid
-      responses:
-        200:
-          description: Succesfully get user.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        401:
-          $ref: '#/components/responses/401Unauthorized'
-        403:
-          $ref: '#/components/responses/403PermissionDenied'
-        404:
-          $ref: '#/components/responses/404ContentNotFound'
-        500:
-          $ref: '#/components/responses/500ServerError'
-
-    delete:
-      tags:
-        - User
-      operationId: deleteUserById
-      summary: Delete user by id.
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: string
-            format: uuid
-      responses:
-        204:
-          description: User successfully deleted.
-        401:
-          $ref: '#/components/responses/401Unauthorized'
-        403:
-          $ref: '#/components/responses/403PermissionDenied'
-        404:
-          $ref: '#/components/responses/404ContentNotFound'
-        500:
-          $ref: '#/components/responses/500ServerError'
-
-  /user/lock/{userId}:
-    put:
-      tags:
-        - User
-      operationId: lockUser
-      summary: Lock a user.
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          description: user id
-          schema:
-            type: string
-            format: uuid
-      responses:
-        204:
-          description: Successfully locked.
-        400:
-          $ref: '#/components/responses/400BadRequest'
-        401:
-          $ref: '#/components/responses/401Unauthorized'
-        403:
-          $ref: '#/components/responses/403PermissionDenied'
-        404:
-          $ref: '#/components/responses/404ContentNotFound'
-        500:
-          $ref: '#/components/responses/500ServerError'
-
-  /user/unlock/{userId}:
-    put:
-      tags:
-        - User
-      operationId: unlockUser
-      summary: Unlock a user.
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          description: user id
-          schema:
-            type: string
-            format: uuid
-      responses:
-        204:
-          description: Successfully unlocked.
-        400:
-          $ref: '#/components/responses/400BadRequest'
-        401:
-          $ref: '#/components/responses/401Unauthorized'
-        403:
-          $ref: '#/components/responses/403PermissionDenied'
-        404:
-          $ref: '#/components/responses/404ContentNotFound'
-        500:
-          $ref: '#/components/responses/500ServerError'
-
   /ticketType:
     get:
       tags:
@@ -1111,110 +867,6 @@ paths:
 
 components:
   schemas:
-    Authenticate:
-      type: object
-      properties:
-        username:
-          type: string
-        password:
-          type: string
-          format: password
-      required:
-        - username
-        - password
-
-    Token:
-      type: object
-      properties:
-        token:
-          type: string
-
-    User:
-      type: object
-      properties:
-        id:
-          type: string
-          format: uuid
-        firstname:
-          type: string
-        lastname:
-          type: string
-        email:
-          type: string
-          format: email
-        password:
-          type: string
-        role:
-          type: string
-          enum:
-            - ADMIN
-            - PASSENGER
-            - VALIDATOR
-          default: 'PASSENGER'
-        numberOfIncorrectLogins:
-          type: integer
-          minimum: 0
-          maximum: 3
-        locked:
-          type: boolean
-          default: false
-        token:
-          type: string
-      required:
-        - 'id'
-        - 'firstname'
-        - 'lastname'
-        - 'email'
-        - 'role'
-
-    UserRegister:
-      type: object
-      properties:
-        firstname:
-          type: string
-        lastname:
-          type: string
-        email:
-          type: string
-          format: email
-        password:
-          type: string
-      required:
-        - 'firstname'
-        - 'lastname'
-        - 'email'
-
-    UserSearch:
-      type: object
-      properties:
-        firstname:
-          type: string
-        lastname:
-          type: string
-        email:
-          type: string
-          format: email
-        role:
-          type: string
-          enum:
-            - ADMIN
-            - PASSENGER
-            - VALIDATOR
-        locked:
-          type: boolean
-        sortBy:
-          type: string
-          nullable: false
-          description: 'Sort by this column'
-          default: 'firstname'
-        sortOrder:
-          type: string
-          enum:
-            - ASC
-            - DESC
-          description: 'Sort order'
-          default: 'ASC'
-
     TicketType:
       type: object
       properties:
